--- a/socket/pom.xml
+++ b/socket/pom.xml
@@ -29,6 +29,11 @@
             <version>3.0.0</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 
 
