--- a/rmi/pom.xml
+++ b/rmi/pom.xml
@@ -3,15 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>cn.lirui</groupId>
+        <artifactId>LiruiDistributed</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>cn.lirui</groupId>
-    <artifactId>LiruiDistributed</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>socket</module>
-        <module>rmi</module>
-    </modules>
+    <artifactId>rmi</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>cn.lirui</groupId>
+            <artifactId>socket</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
