--- a/rmi/pom.xml
+++ b/rmi/pom.xml
@@ -13,9 +13,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.lirui</groupId>
-            <artifactId>socket</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.0.0</version>
+            <type>maven-plugin</type>
         </dependency>
     </dependencies>
 
